--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,63 +3,55 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Meu Trabalho</title>
-	<link rel='shortcut icon' th:href="@{/images/login.webp}" /> 
-	<link rel="stylesheet" type="text/css" th:href="@{/css/login.css}" />
+	<link rel='shortcut icon' th:href="@{/images/banner.webp}" /> 
+	<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/template.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/css/fonts.css}" />
+	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  	<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
+	<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 </head>
 <body>
-	<header id="pagelet_bluebar" data-referrer="pagelet_bluebar">
-		<h1>
-			<a href="http://www.meutrabalho.com.br/" title="Ir para a página inicial do Meu Trabalho">
-				<img th:src="@{/images/login.webp}" class="img-responsive center-block" width="350" height="60" alt="Logo Meu Trabalho" />
-			</a>
+	<header id="header-wrapper">
+		<h1 id="header" class="container">
+			<div id="menu">
+				<a href="http://www.meutrabalho.com.br/" title="Ir para a página inicial do Meu Trabalho">
+					<img th:src="@{/images/login.webp}" class="img-responsive center-block" width="350" height="60" alt="Logo Meu Trabalho" />
+				</a>
+			</div>
 		</h1>
 	</header>
-	<section>
-		<form th:action="@{/login}" method="POST" class="form-signin">
-			<h3 class="form-signin-heading" th:text="Login"></h3>
-
-			<table role="presentation">			
-				<tbody>
-					<tr>
-						<td>
-							<label for="email">Email</label>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="text" id="email" name="email" class="form-control" tabindex="1"/>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<label for="pass">Senha</label>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<input type="password" id="password" name="password" class="form-control" tabindex="2"/>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-			<div align="center" th:if="${param.error}">
-				<p style="font-size: 20; color: #FF1C19;">Email ou senha inválidos</p>
+	<section style="background-color: #e9ebee;">
+		<!-- Form Module-->
+		<div class="module form-module">
+			<div class="toggle"></div>
+			<div class="form">
+				<h2 class="titulo">Login</h2>
+			  <form th:action="@{/login}" method="POST">
+			  	<input type="text" id="email "name="email" placeholder="Email" />
+			  	<input type="password" id="password" name="password" placeholder="Senha"/>
+			    
+			    <div align="center" th:if="${param.error}">
+					<p style="font-size: 20; color: #FF1C19;">Email ou senha inválidos</p>
+				</div>
+				<button name="Submit" value="Entrar" type="Submit" th:text="Entrar"></button>
+			  </form>
 			</div>
-			<button class="button" name="Submit" value="Entrar" type="Submit" th:text="Entrar"></button>
-		</form>
-		<form th:action="@{/registration}" method="get">
-			<button class="button" type="Submit">Cadastrar</button>
-		</form>	
-		<label class="sobre">Sobre o Sistema MeuTrabalho</label>
+		  	<form class="cadastrar" th:action="@{/registration}" method="get">
+				<button class="button" type="Submit">Cadastrar</button>
+			</form>	
+		</div>
+	</section>
+	<footer id="copyright">
+		<label class="title">Sobre o Sistema MeuTrabalho</label>
 		<p>O sistema MeuTrabalho foi desenvolvido para atender solicitações de clientes de forma ágil e prática. 
 		As solicitações são realizadas através do site ou em qualquer celular com sistema operacional Android ou IOS. 
 		O MeuTrabalho conta com um leque de empresas oferecendo diversos tipos de serviços para total satisfação dos clientes.</p>
       	<p>Para se cadastrar as empresas devem entrar em contato através do nosso email <b>tecnologiagrave@gmail.com</b>, sendo necessárias informações básicas das mesmas.
       Todas as pessoas fisícas podem realizar seu cadastro de forma gratuita através do botão <b>Cadastrar</b> com as informações necessárias para tal.
        O sistema promove a interação entre ambas as partes, com foco no atendimento das solicitações dos clientes.</p>
-	</section>
-	<footer id="rodape">
-		<ul>
+		<ul class="contact">
 			<li><a href="http://www.meutrabalho.com.br/registration">Cadastre-se</a></li>
 			<li><a href="http://www.meutrabalho.com.br/www/index.html">Entrar</a></li>
 			<li><a href="http://www.meutrabalho.com.br">WorkMe</a></li>
