--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -39,19 +39,20 @@ body {
 .form-module {
   position: relative;
   background: #ffffff;
-  max-width: 520px;
+  max-width: 580px;
   width: 100%;
   border-top: 5px solid #33b5e5;
-  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.2);
   margin: 0 auto;
   margin-top: 1%;
 }
+
 .form-module .toggle {
   cursor: pointer;
   position: absolute;
   top: -0;
   right: -0;
-  background: #33b5e5;
+  background: #448AFF;
   width: 30px;
   height: 30px;
   margin: -5px 0 0;
@@ -60,6 +61,7 @@ body {
   line-height: 30px;
   text-align: center;
 }
+
 .form-module .toggle .tooltip {
   position: absolute;
   top: 5px;
@@ -71,7 +73,6 @@ body {
   font-size: 10px;
   line-height: 1;
   text-transform: uppercase;
-  margin-top: 5%;
 }
 .form-module .toggle .tooltip:before {
   content: '';
@@ -93,7 +94,7 @@ body {
 
 .form-module h2 {
   margin: 0 0 20px;
-  color: #33b5e5;
+  color: #303F9F;
   font-size: 18px;
   font-weight: 400;
   line-height: 1;
@@ -111,22 +112,26 @@ body {
   transition: 0.3s ease;
 }
 .form-module input:focus {
-  border: 1px solid #33b5e5;
+  border: 1px solid #448AFF;
   color: #333333;
 }
 .form-module button {
   cursor: pointer;
-  background: #33b5e5;
+  background: #448AFF;
   width: 100%;
   border: 0;
   padding: 10px 15px;
   color: #ffffff;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
-  margin-top: 10%;
 }
+
+button{
+	border-radius: 3px;	
+}
+
 .form-module button:hover {
-  background: #178ab4;
+  background: #0288D1;
 }
 .form-module .cta {
   background: #f2f2f2;
@@ -140,5 +145,4 @@ body {
 .form-module .cta a {
   color: #333333;
   text-decoration: none;
-  margin-top: 10%;
 }
