--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,10 +22,10 @@ body {
   font-size: 12px;
 }
 .pen-title span .fa {
-  color: #33b5e5;
+  color: #3b5998;
 }
 .pen-title span a {
-  color: #33b5e5;
+  color: #3b5998;
   font-weight: 600;
   text-decoration: none;
 }
@@ -52,7 +52,7 @@ body {
   position: absolute;
   top: -0;
   right: -0;
-  background: #448AFF;
+  background: #3b5998;
   width: 30px;
   height: 30px;
   margin: -5px 0 0;
@@ -94,7 +94,7 @@ body {
 
 .form-module h2 {
   margin: 0 0 20px;
-  color: #303F9F;
+  color: #3b5998;
   font-size: 18px;
   font-weight: 400;
   line-height: 1;
